# fcmp

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.txt  THANKS  apt.yaml  bootstrap  clean.sh  config.h.in  configure.ac  configure.in  debian.sh  fcmp.3  fcmp.pc.in  fcmp.spec  install_prereqs.sh  release.sh  zip.sh
config/: deps.py
debian/: README.Debian  README.source  changelog  control  copyright  docs  fcmp.cron.d.ex  fcmp.default.ex  fcmp.doc-base.EX  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  shlibs.local.ex  watch.ex
doc/: TODO.txt
scripts/: ubuntu_install.py
templardefs/: deps.py
